--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2024"
 [dependencies]
 html5ever = "0.36.0"
 markup5ever_rcdom = "0.36.0"
+reqwest = { version = "0.13.1", features = ["blocking"] }
