--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,7 @@ edition = "2024"
 [dependencies]
 html5ever = "0.36.0"
 markup5ever_rcdom = "0.36.0"
-reqwest = { version = "0.13.1", features = ["blocking"] }
+reqwest = { version = "0.13.1" }
+tokio = { version = "1", features = ["full"] }
+futures = "0.3"
+clap = { version = "4", features = ["derive"] }
