--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ reqwest = { version = "0.13.1" }
 tokio = { version = "1", features = ["full"] }
 futures = "0.3"
 clap = { version = "4", features = ["derive"] }
+
+[dev-dependencies]
+wiremock = "0.6.5"
